# 123

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  MANIFEST.json  README.md  cart_autolab_autoresearch_workflow_llm_github_upload_ready_6fad06ee.zip.sha256  pyproject.toml
artifacts/: artifact_manifest.json
configs/: autoresearch_gemini.yaml  autoresearch_reasoning_gemini.yaml  experiment_cytokine_gpc3_liver.yaml  experiment_cytokine_gpc3_liver_ablation.yaml  experiment_cytokine_gpc3_liver_autoresearch.yaml  experiment_cytokine_gpc3_liver_llm_mock.yaml  experiment_cytokine_gpc3_liver_local_llm.yaml  experiment_cytokine_gpc3_liver_physicell.yaml  experiment_cytokine_gpc3_liver_replay.yaml  experiment_cytokine_gpc3_liver_safe_demo.yaml  gemini_api.yaml  llm_config.example.yaml  local_llm_gemma.yaml  local_llm_qwen.yaml  openai_api.yaml  simulator_physicell.yaml
docs/: REVIEWER_README.md  autoresearch_local_workflow.md  code_availability_statement.md  final_reviewer_response_checklist.md  integration_status.md  limitations_llm_physicell.md  llm_agent_workflow.md  llm_contribution_verification.md  local_llm_manuscript_archive.md  local_llm_model_comparison.md  manuscript_revision_snippets.md  manuscript_wording_revisions.md  mock_data_policy.md  physicell_external_mode.md  post_implementation_audit.md  pr_split_plan.md  rebuttal_to_reviewer_llm_workflow.md  remaining_limitations.md  reproducibility_artifacts.md  reproducibility_commands.md  reviewer_offline_release_notes.md  reviewer_reproducibility_audit.md  reviewer_reproducibility_commands.md  (+2 more)
tests/: test_config.py  (+30 more)
(+210 files in other folders)
