[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cart-insilico-autolab"
version = "0.1.0"
description = "LLM-guided CAR-T in silico autonomous lab workflow with PhysiCell adapter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "requests>=2.31",
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "jinja2>=3.1",
  "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cart-autolab = "cart_autolab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
